Use predefined domain policies from drools core
Issue-ID: POLICY-2388
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: I5948ed5152297e4addbab444ed65dcd3b8002492